# abc

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  abc.js  abc.wasm  ards_assembler.cpp  ards_assembler.hpp  ards_c.cpp  ards_compiler.cpp  ards_compiler.hpp  ards_compiler_codegen.cpp  ards_compiler_parse.cpp  ards_compiler_type.cpp  ards_compiler_write.cpp  ards_countstream.hpp  ards_error.hpp  grammar.txt  index.html
.github/workflows/: build.yml  release.yml
ards_vm/: .gitignore  SpritesU.hpp  ards_instr.hpp  ards_tone.hpp  ards_vm.cpp  ards_vm.hex  ards_vm.hpp  ards_vm.ino  ards_vm.ino-arduboy-fx.hex  ards_vm.ino-arduboy-leonardo-ssd1306-sda.hex  ards_vm.ino.with_bootloader-arduboy-leonardo-ssd1306-sda.hex  font.cpp  vm_sys.cpp
benchmarks/: .gitignore  abc_benchmarks.cpp  benchmarks.md  benchmarks.txt  cycles_code.txt  cycles_instruction.txt  instructions.asm  latencies.txt
benchmarks/_cycles_code/: asm.txt  bench_math.abc  main.abc
benchmarks/bubble/: bubble.abc  bubble.ino  bubble.ino-arduboy-fx.hex
benchmarks/bubble1/: asm.txt  bubble1.abc  bubble1.ino  bubble1.ino-arduboy-fx.hex
benchmarks/bubble2/: asm.txt  bubble2.abc  bubble2.ino  bubble2.ino-arduboy-fx.hex
benchmarks/bubble3/: asm.txt  bubble3.abc  bubble3.ino  bubble3.ino-arduboy-fx.hex
benchmarks/bubble4/: asm.txt  bubble4.abc  bubble4.ino  bubble4.ino-arduboy-fx.hex
benchmarks/fibonacci/: asm.txt  fibonacci.abc  fibonacci.ino  fibonacci.ino-arduboy-fx.hex
benchmarks/format/: asm.txt  format.abc  format.ino  format.ino-arduboy-fx.hex
benchmarks/lasertank/: LICENSE  asm.txt  benchmark.abc  benchmark.txt
benchmarks/mat3rotation/: asm.txt  mat3rotation.abc  mat3rotation.ino  mat3rotation.ino-arduboy-fx.hex
benchmarks/platformer/: DazzleDash.arduboy  asm.txt  benchmark.abc  map.abc  sounds.abc  update.abc  vars.abc
benchmarks/sieve/: asm.txt  sieve.abc  sieve.ino  sieve.ino-arduboy-fx.hex
benchmarks/text/: asm.txt  text.abc  text.ino  text.ino-arduboy-fx.hex
benchmarks/tilesrect/: asm.txt  tilesrect.abc  tilesrect.ino  tilesrect.ino-arduboy-fx.hex
benchmarks/tilessprite/: asm.txt  tilessprite.abc  tilessprite.ino  tilessprite.ino-arduboy-fx.hex
benchmarks/tilessprite16/: asm.txt  tilessprite16.abc  tilessprite16.ino  tilessprite16.ino-arduboy-fx.hex
benchmarks/tilessprite16_tmap/: asm.txt  tilessprite16_tmap.abc  tilessprite16_tmap.ino  tilessprite16_tmap.ino-arduboy-fx.hex
benchmarks/tilessprite_tmap/: asm.txt  tilessprite_tmap.abc  tilessprite_tmap.ino
docs/: abc_docs.cpp  binary_format.md  building.md  builtin_fonts.md  language.md  system.md  system_calls.md
examples/: .gitignore  game.arduboy
examples/basic/: asm.txt  info.json  main.abc
examples/circle/: asm.txt  main.abc
examples/font/: asm.txt  main.abc
examples/gray/: asm.txt  game.arduboy  main.abc
examples/midi/: asm.txt  game.arduboy  main.abc  midi.arduboy  music.arduboy  simple.mid  song.mid
examples/platformer/: DazzleDash.arduboy  asm.txt  bench.arduboy  benchmark.abc  benchmark.txt  game.arduboy  info.json  main.abc  map.abc  mapdata.abc  platformer.arduboy  platformer_mini.arduboy  render.abc  sounds.abc  update.abc  vars.abc
examples/pong/: asm.txt  frame.abc  main.abc  pong.arduboy  sprites.abc  vars.abc
examples/snake/: asm.txt  main.abc  snake.abc
examples/sprite/: asm.txt  main.abc
examples/tilemap/: asm.txt  main.abc  tileset.tsx  world.tmx
fonts/: fonts.txt  main.abc  sources.txt
fonts/attribution_required/: licenses.txt
interp_arduboy/: .gitignore  SpritesABC.cpp  SpritesABC.hpp  SpritesU.hpp  StreamABC.hpp  _build.bat  abc_div.S  abc_float.S  abc_instr.hpp  abc_memcpy.S  ards_shades.cpp  ards_shades.hpp  ards_tone.hpp  ards_vm.cpp  ards_vm.hpp  font.cpp  interp_arduboy.ino  vm_sys.cpp
interp_arduboy/build_ArduboyFX/: interp_arduboy.ino.hex
interp_arduboy/build_ArduboyMini/: interp_arduboy.ino.hex
interp_arduboy/build_homemade.leonardo.sh1106.sda/: interp_arduboy.ino.hex
interp_arduboy/build_homemade.promicro_alt.sh1106.rx/: interp_arduboy.ino.hex
interp_arduboy/build_homemade.promicro_alt.ssd1306.rx/: interp_arduboy.ino.hex
interp_arduboy/build_homemade_alt/: interp_arduboy.ino.hex
interp_arduboy/build_homemade_sh1106/: interp_arduboy.ino.hex
interp_arduboy/build_homemade_sh1106_alt/: interp_arduboy.ino.hex
interp_arduboy/build_mini/: interp_arduboy.ino.hex
interp_arduboy/build_s2_ArduboyFX/: interp_arduboy.ino.hex
interp_arduboy/build_s2_ArduboyMini/: interp_arduboy.ino.hex
interp_arduboy/build_s2_homemade.leonardo.sh1106.rx/: interp_arduboy.ino.hex
interp_arduboy/build_s2_homemade.leonardo.sh1106.sda/: interp_arduboy.ino.hex
interp_arduboy/build_s2_homemade.promicro_alt.sh1106.rx/: interp_arduboy.ino.hex
interp_arduboy/build_s2_homemade.promicro_alt.ssd1306.rx/: interp_arduboy.ino.hex
interp_general/: abc_instr.h  abc_instr.hpp  abc_interp.c  abc_interp.h  abc_interpreter_sdl2.c
interp_generic/: abc_interp.c  abc_interp.h  abc_interpreter_sdl2.c  abc_interpreter_sokol.c
resources/: abc.icns  abc_icon.c  fonts.txt
src/: abc_assembler.cpp  abc_assembler.hpp  abc_compiler.cpp  abc_compiler.hpp  abc_compiler_codegen.cpp  abc_compiler_codegen_expr.cpp  abc_compiler_decl.cpp  abc_compiler_font.cpp  abc_compiler_instr_info.cpp  abc_compiler_optimize.cpp  abc_compiler_optimize_stack.cpp  abc_compiler_parse.cpp  abc_compiler_progdata.cpp  abc_compiler_sprites.cpp  abc_compiler_tilemap.cpp  abc_compiler_tones.cpp  abc_compiler_transforms.cpp  abc_compiler_type.cpp  abc_compiler_unroll.cpp  abc_compiler_write.cpp  abc_error.hpp  abc_frame_sizes.cpp  abc_integration.cpp  abc_sysfuncs.cpp  abcc.cpp  ards_assembler.cpp  ards_assembler.hpp  ards_c.cpp  ards_compiler.cpp  ards_compiler.hpp  ards_compiler_codegen.cpp  ards_compiler_codegen_expr.cpp  ards_compiler_decl.cpp  ards_compiler_font.cpp  ards_compiler_parse.cpp  ards_compiler_peephole.cpp  ards_compiler_progdata.cpp  ards_compiler_sprites.cpp  ards_compiler_tilemap.cpp  ards_compiler_tones.cpp  (+28 more)
src/fonts/: all_fonts.hpp  (+59 more)
test/: test.ards  test2.ards  test3.ards
tests/: abc_tests.cpp
(+176 files in other folders)
